plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '3.1.1'
}

group 'homer.database'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    if (javafx.platform.classifier == "linux-aarch64") {
        maven {
            url "https://nexus.gluonhq.com/nexus/content/repositories/releases/"  // only for javaFX -v21.0.1
        }
    }
    flatDir {
        dirs "${rootDir}/../jar-libs"
    }
    maven {
        url uri("${rootDir}/../local-repo")
    }
}

sourceCompatibility = '9'
targetCompatibility = '9'

plugins.withType(JavaPlugin) {
    sourceCompatibility = '9'
    targetCompatibility = '9'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    sourceCompatibility = '9'
    targetCompatibility = '9'
}

application {
    mainModule = 'homer.database.gui'
    mainClass = 'homer.database.gui.HomerDataBaseApplication'
}

javafx {
    version = '21.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation 'org.slf4j:slf4j-api:1.7.36'
    implementation 'org.slf4j:slf4j-jdk14:1.7.36'

    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:$javafx.platform.classifier"

//    implementation name: 'HomerDataBase-2.0.0-backend'
//    implementation name: 'HomerDataBase-2.0.0-converter'
    implementation 'homer.database:backend:beta-2.0.0'
    implementation 'homer.database:converter:beta-2.0.0'
}

jlink {
    forceMerge 'slf4j'
    mergedModule {
        requires "java.xml"
        requires "java.desktop"
        requires "java.sql"
    }
    addExtraDependencies("javafx")
    imageZip = project.file("${buildDir}/distributions/HomerDataBase-v${version}-${javafx.platform.classifier}.zip")
    options = [
            '--strip-debug', '--no-header-files', '--no-man-pages',
//            '--module-path', "$System.env.PATH_TO_FX_MODS",
//            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
    launcher {
        name = 'HomerDataBase'
    }
}

jlinkZip {
    group = 'distribution'
}